[package]
name = "DocSense"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
poppler-rs = "0.24.1"
rust-stemmers = "1.2.0"
serde = { version = "1.0.219" , features = ["derive"] }
serde_json = "1.0.140"
tiny_http = "0.12.0"
xml-rs = "0.8.26"
